--- a/06-publication/main_figures/Figure_5/Figure_5.Rmd
+++ b/06-publication/main_figures/Figure_5/Figure_5.Rmd
@@ -22,11 +22,6 @@ library(vegan)
 library(variancePartition)
 library(janitor)
 library(pander)
-library(sf)
-library(rnaturalearth)
-library(rnaturalearthdata)
-library(rgeos)
-library(maps)
 library(tidyverse)
 library(gplots)
 library(ggsignif)
@@ -44,37 +39,6 @@ notebook itself.
 ```{r setup}
 knitr::opts_knit$set(root.dir = normalizePath("../../../"))
 ```
-
-# Site map
-```{r}
-# pull country data
-world <- ne_countries(scale = "medium", returnclass = "sf")
-
-# add coordinates to a dataframe
-smoking_sites <- data.frame(longitude = c(4.9168030, -2.9804059,-1.257,-3.7892050,-0.3765000), latitude = c(52.5519900, 43.2805735,51.752,37.7769480,39.4695270), Site = c("MID","CMB","Radcliffe","JAE","VLC"), Data = c("New","New","Published","Published","Published"))
-
-non_smoking_sites <- data.frame(longitude = c(-8.2023080,-0.8088890,-2.8622220), latitude = c(54.0068400,38.2486110,38.6963890), Site = c("Kilteasheen","ELR","IVE"), Data = c("Published","New","New"))
-
-
-# plot the map
-sampling_sites_europe <- ggplot(data = world) +
-  geom_sf(colour = "#ffffff", fill = "#bbbbbb", linetype = "dotted") +
-  #for grey map with white lines
-  geom_sf(fill = "#f7fcf5") +
-  geom_point(data = non_smoking_sites, aes(x = longitude, y = latitude, color = Data), size = 4,
-        shape = 17) +
-  geom_point(data = smoking_sites, aes(x = longitude, y = latitude, color = Data), size = 4,
-        shape = 19) +
-  coord_sf(xlim = c(-12, 20), ylim = c(35, 60), expand = FALSE) +
-  theme_void() +
-  scale_color_manual(values = c("black","grey50"))
-sampling_sites_europe
-
-ggsave("./06-publication/main_figures/Figure_5/sample_site_map.pdf", plot = sampling_sites_europe, device = "pdf",
-       scale = 1, width = 5, height = 5, units = c("in"), dpi = 300)
-
-```
-
 
 # MetaPhlAn3
 
@@ -348,7 +312,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
     exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%") # explained variance for x- and y-labels
     
     # select only the PCs from the PCA and add metadata
-    df_X <- df$prop_expl_var$X %>%
+    df_X <- df$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
               inner_join(full_metadata, by = "Library_ID")
@@ -373,12 +337,12 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
     pws_10 <- df$loadings$X %>%
       as.data.frame(.) %>%
       rownames_to_column(var = "Taxon") %>%
-      top_n(10, !!arrow_pc)
+      top_n(4, !!arrow_pc)
 
     neg_10 <- df$loadings$X %>%
       as.data.frame(.) %>%
       rownames_to_column(var = "Taxon") %>%
-      top_n(-10, !!arrow_pc)
+      top_n(-4, !!arrow_pc)
 
 
     pca_plot_bi <- ggplot(df_Y, aes(x = get(paste(pc1)), y = get(paste(pc2)))) +
@@ -390,7 +354,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
                    arrow = arrow(length = unit(0.03, "npc"))) +
       geom_label_repel(data = pws_10,
                    aes(x = get(paste(pc1)), y = get(paste(pc2)), label = Taxon),
-                   size = 2.5, colour = "grey20", label.padding = 0.2, force = 5, max.overlaps = 14) +
+                   size = 4.0, colour = "grey20", label.padding = 0.2, force = 5, max.overlaps = 14) +
       geom_segment(data = neg_10,
                    aes(xend = get(paste(pc1)), yend = get(paste(pc2))),
                    x = 0, y = 0, colour = "grey50",
@@ -398,12 +362,12 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
                    arrow = arrow(length = unit(0.03, "npc"))) +
       geom_label_repel(data = neg_10,
                    aes(x = get(paste(pc1)), y = get(paste(pc2)), label = Taxon),
-                   size = 2.5, colour = "grey20", label.padding = 0.2, max.overlaps = 14) +
+                   size = 4.0, colour = "grey20", label.padding = 0.2, max.overlaps = 14) +
       labs(x = paste(xaxis, " - ", exp_var_pc1),
            y = paste(yaxis, " - ", exp_var_pc2)) +
       scale_fill_manual(values = metadata_group_colors) +
-      # scale_shape_manual(values = c(21, 22, 23, 24, 21, 22, 23, 24)) +
-      scale_shape_manual(values = metadata_group_shapes) +
+      scale_shape_manual(values = c(21, 22, 23, 24, 21, 22, 23, 24)) +
+      # scale_shape_manual(values = metadata_group_shapes) +
       theme_minimal() + theme(text = element_text(size = 16)) +
       theme(text = element_text(size=16)) +
       theme(legend.position = "top")
@@ -580,7 +544,7 @@ pc1_neg_plot
 
 ```
 
-```{r biplots_all_species, eval = F}
+```{r biplots_all_species}
 
 mpa3_species_decontam_unfilt_all <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
@@ -600,6 +564,12 @@ Time_period_shapes <- c(Industrial = 21, Medieval = 24, Modern = 22, Extraction_
 mpa3_species_decontam_filtered_nocontrols_biplot_121 <- plot_pca_bi(mpa3_species_decontam_unfilt_all.pca, "PC1", "PC2", "Time_period", PC1)
 mpa3_species_decontam_filtered_nocontrols_biplot_121
 # plot_pca_bi(mpa3_species_decontam_unfilt_no_Moralis.pca, "PC1", "PC2", "Time_period", PC1)
+
+
+ggsave("./06-publication/main_figures/Figure_5/biplot.pdf", plot = mpa3_species_decontam_filtered_nocontrols_biplot_121,
+       device = "pdf", scale = 1, width = 10, height = 8, units = c("in"), dpi = 300)
+
+
 
 mpa3_species_decontam_unfilt_all.pca$variates$X %>%
   as.data.frame() %>%
@@ -765,8 +735,8 @@ rain
 beta_div <- time_period + pc1_neg_plot + gc + box
 beta_div
 
-ggsave("./06-publication/main_figures/Figure_5/beta_div_all.pdf", plot = beta_div,
-       device = "pdf", scale = 1, width = 11, height = 8.5, units = c("in"), dpi = 300)
+# ggsave("./06-publication/main_figures/Figure_5/beta_div_all.pdf", plot = beta_div,
+#        device = "pdf", scale = 1, width = 11, height = 8.5, units = c("in"), dpi = 300)
 
 ```
 
