Fig3 Fig5 updates

--- a/06-publication/main_figures/Figure_3/Figure_3.Rmd
+++ b/06-publication/main_figures/Figure_3/Figure_3.Rmd
@@ -1007,7 +1007,7 @@ h3_paths_pca_values <- humann3_path_l1.pca$variates$X %>%
 
 # rename vriables to look nice in figures
 h3_paths_pca_values_select <- h3_paths_pca_values %>%
-  select(Library_ID, PC1, PC2, PC1_sp, PC2_sp, Percent_pws_pc1, Percent_neg_pc1, Percent_pws_pc2, Percent_neg_pc2, seq_len_avg, gc_avg, No_reads_total, Sanguinis, Anginosus, Age_n, Sex_n, Pipenotch_n, Min_no_Pipe_notches, `%AMTL`, `%teeth_with_caries`, calc_sup_SI_score, Peridontal_affect_score, `%_positions_with_Periodontal`, Max_Perio_Score, Calculus_extracted_mg, `extract_conc_ng/mg`, `extract_conc_ng/uL`, `extract_conc_after_storage_ng/uL`, `DNA_molecules_per_library_x10^6`,Calc_sub_SI_score, `%teeth_with_calc`, `%_positions_perioapical`) %>%
+  select(Library_ID, PC1, PC2, PC1_sp, PC2_sp, Percent_pws_pc1, Percent_neg_pc1, Percent_pws_pc2, Percent_neg_pc2, seq_len_avg, gc_avg, No_reads_total, Age_n, Sex_n, Pipenotch_n, Min_no_Pipe_notches, `%AMTL`, `%teeth_with_caries`, calc_sup_SI_score, Peridontal_affect_score, `%_positions_with_Periodontal`, Max_Perio_Score, Calculus_extracted_mg, `extract_conc_ng/mg`, `extract_conc_ng/uL`, `extract_conc_after_storage_ng/uL`, `DNA_molecules_per_library_x10^6`,Calc_sub_SI_score, `%teeth_with_calc`, `%_positions_perioapical`) %>%
   rename(`Seq length` = seq_len_avg,
          GC = gc_avg,
          `Total reads` = No_reads_total,
@@ -1036,10 +1036,10 @@ h3_paths_pca_values_select <- h3_paths_pca_values %>%
          `Species % PC2+` = Percent_pws_pc2,
          `Species % PC2-` = Percent_neg_pc2) %>%
   # re-order the columns
-  select(Library_ID, PC1, PC2, Age, Sex, Pipenotch, `Min no. pipenotch`, `% AMTL`, `% Caries`, `Supra calc score`, `Sub calc score`, `% Calculus`, `Perio score`, `% Perio`, `Max perio score`, `% Perioapical`, `Extracted weight (mg)`, `Pre-storage [extract] (ng/mg)`, `Pre-storage [extract] (ng/uL)`, `Post-storage [extract] (ng/uL)`, `[Library] (molecules)`, `Seq length`, GC, `Total reads`, Sanguinis, Anginosus, `Species PC1`, `Species PC2`, `Species % PC1+`, `Species % PC1-`, `Species % PC2+`, `Species % PC2-`)
+  select(Library_ID, PC1, PC2, Age, Sex, Pipenotch, `Min no. pipenotch`, `% AMTL`, `% Caries`, `Supra calc score`, `Sub calc score`, `% Calculus`, `Perio score`, `% Perio`, `Max perio score`, `% Perioapical`, `Extracted weight (mg)`, `Pre-storage [extract] (ng/mg)`, `Pre-storage [extract] (ng/uL)`, `Post-storage [extract] (ng/uL)`, `[Library] (molecules)`, `Seq length`, GC, `Total reads`, `Species PC1`, `Species PC2`, `Species % PC1+`, `Species % PC1-`, `Species % PC2+`, `Species % PC2-`)
 
 # select variables
-form <- ~ PC1 + PC2 + Age + Sex + Pipenotch + `Min no. pipenotch` + `% AMTL` + `% Caries` + `Supra calc score` + `Sub calc score` + `% Calculus` + `Perio score` + `% Perio` + `Max perio score` + `% Perioapical` + `Extracted weight (mg)` + `Pre-storage [extract] (ng/mg)` + `Pre-storage [extract] (ng/uL)` + `Post-storage [extract] (ng/uL)` + `[Library] (molecules)` + `Seq length` + GC + `Total reads` + Sanguinis + Anginosus + `Species PC1` + `Species PC2` +`Species % PC1+` + `Species % PC1-` + `Species % PC2+` + `Species % PC2-`
+form <- ~ PC1 + PC2 + Age + Sex + Pipenotch + `Min no. pipenotch` + `% AMTL` + `% Caries` + `Supra calc score` + `Sub calc score` + `% Calculus` + `Perio score` + `% Perio` + `Max perio score` + `% Perioapical` + `Extracted weight (mg)` + `Pre-storage [extract] (ng/mg)` + `Pre-storage [extract] (ng/uL)` + `Post-storage [extract] (ng/uL)` + `[Library] (molecules)` + `Seq length` + GC + `Total reads` + `Species PC1` + `Species PC2` +`Species % PC1+` + `Species % PC1-` + `Species % PC2+` + `Species % PC2-`
 
 # compute CCA
 C_mid = canCorPairs( form, h3_paths_pca_values_select)
@@ -1049,7 +1049,7 @@ C_mid = canCorPairs( form, h3_paths_pca_values_select)
 ```{r pearson_corr_mid}
 # test for significant differences in diversity between the metadata categories
 pearson_mid <- h3_paths_pca_values_select %>%
-rstatix::cor_test(., PC1, PC2, Age, Sex, Pipenotch, `Min no. pipenotch`, `% AMTL`, `% Caries`, `Supra calc score`, `Sub calc score`, `% Calculus`, `Perio score`, `% Perio`, `Max perio score`, `% Perioapical`, `Extracted weight (mg)`, `Pre-storage [extract] (ng/mg)`, `Pre-storage [extract] (ng/uL)`, `Post-storage [extract] (ng/uL)`, `[Library] (molecules)`, `Seq length`, GC, `Total reads`, Sanguinis, Anginosus, `Species PC1`, `Species PC2`, `Species % PC1+`, `Species % PC1-`, `Species % PC2+`, `Species % PC2-`, method="pearson")
+rstatix::cor_test(., PC1, PC2, Age, Sex, Pipenotch, `Min no. pipenotch`, `% AMTL`, `% Caries`, `Supra calc score`, `Sub calc score`, `% Calculus`, `Perio score`, `% Perio`, `Max perio score`, `% Perioapical`, `Extracted weight (mg)`, `Pre-storage [extract] (ng/mg)`, `Pre-storage [extract] (ng/uL)`, `Post-storage [extract] (ng/uL)`, `[Library] (molecules)`, `Seq length`, GC, `Total reads`, `Species PC1`, `Species PC2`, `Species % PC1+`, `Species % PC1-`, `Species % PC2+`, `Species % PC2-`, method="pearson")
 
 pearson_mid %>%
   mutate(same = var1 == var2) %>%
